Hackathon | Backend | Quizzes module - ResolveQuiz query
